--- a/client/css/main.css
+++ b/client/css/main.css
@@ -184,3 +184,27 @@ body {
     justify-content: space-between;
 }
 
+
+#file-dropper-wrapper {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    background: transparent;
+}
+
+#file-dropper {
+    width: 180px;
+    height: 180px;
+    border-radius: 30px;
+    background: rgba(180,180,180,0.7);
+    border-color: rgba(64,64,64,0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgba(64,64,64,0.8);
+}
+
